plugins {
    id 'idea'
    id 'jacoco'
    id 'signing'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'com.modrinth.minotaur' version '2.+'
    id 'com.vanniktech.maven.publish' version '0.37.0'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')

    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

repositories {
    mavenCentral()
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://api.modrinth.com/maven" }
}

base {
    archivesName = "${mod_id}-neoforge"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()
    withJavadocJar()
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    // Put Minecraft / NeoForge on the test classpath so pure unit tests can
    // reference CompoundTag and other game types (Forge FG did this by default).
    unitTest {
        enable()
        testedMod = mods."${mod_id}"
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "mezz.jei:jei-1.21.1-neoforge:${jei_version}"
    
    compileOnly "org.appliedenergistics:appliedenergistics2:${ae2_version}:api"

    implementation "maven.modrinth:jade:${jade_version}+neoforge"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = base.archivesName.get()
            pom {
                name = mod_name
                description = mod_description
                url = mod_url
                licenses {
                    license {
                        name = mod_license
                        url = mod_license_url
                    }
                }
                developers {
                    developer {
                        id = 'halfcooler'
                        name = 'HalfCooler'
                        email = 'qq1836143240@outlook.com'
                    }
                }
                scm {
                    connection = 'scm:git:${mod_url}.git'
                    developerConnection = 'scm:git:${mod_url}.git'
                    url = mod_url
                }
            }
        }
    }
    repositories {
        maven {
            name = "Central"
            url = uri("https://central.sonatype.com/api/v1/publisher")
            credentials {
                username = project.findProperty("mavenCentralUsername")
                password = project.findProperty("mavenCentralPassword")
            }
        }
    }
}

signing {
    sign publishing.publications.mavenJava
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
